--- a/app/client/module/footer/footer.html
+++ b/app/client/module/footer/footer.html
@@ -9,7 +9,7 @@
 				<li><a href="#">Twitter</a></li>
 			</ul>
 			<div class="footer-logo">
-				<img src="http://placehold.it/180x40" alt="BluePrint Logo">
+				<img src="/images/bpt-color.svg" alt="BluePrint Logo">
 			</div>
 			<div class="copyright">
 				<p class="text-center">
