prod-cleanup: Production cleanup

--- a/app/client/module/footer/footer.html
+++ b/app/client/module/footer/footer.html
@@ -3,7 +3,7 @@
 	<footer>
 		<div class="footer-section">
 			<div class="footer-logo">
-				<img src="/images/bpt-color.svg" alt="BluePrint Logo">
+				<img src="/images/bpt-white.svg" alt="BluePrint Logo">
 			</div>
 			<div class="copyright">
 				<p class="text-center">
