master: Changed email

--- a/app/client/module/footer/footer.html
+++ b/app/client/module/footer/footer.html
@@ -13,7 +13,7 @@
 			<div class="footer-links">
 				<a href="{{ pathFor 'privacy' }}" class="link" >Privacy Policy</a>
 				<a href="{{ pathFor 'terms' }}" class="link" >Terms of Use</a>
-				<a href="mailto:blueprint.today@gmail.com" class="link">Contact</a>
+				<a href="mailto:support@blueprinttoday.com" class="link">Contact</a>
 			</div>
 		</div>
 	</footer>
