Add facebook link to footer nav

--- a/app/client/module/footer/footer.html
+++ b/app/client/module/footer/footer.html
@@ -14,6 +14,7 @@
 				<a href="{{ pathFor 'privacy' }}" class="link" >Privacy Policy</a>
 				<a href="{{ pathFor 'terms' }}" class="link" >Terms of Use</a>
 				<a href="mailto:support@blueprinttoday.com" class="link">Contact</a>
+				<a href="https://www.facebook.com/blueprinttoday" class="link" target="_blank">Facebook</a>
 			</div>
 		</div>
 	</footer>
