Add twitter link. Add facebook and twitter icons.

--- a/app/client/module/footer/footer.html
+++ b/app/client/module/footer/footer.html
@@ -14,7 +14,8 @@
 				<a href="{{ pathFor 'privacy' }}" class="link" >Privacy Policy</a>
 				<a href="{{ pathFor 'terms' }}" class="link" >Terms of Use</a>
 				<a href="mailto:support@blueprinttoday.com" class="link">Contact</a>
-				<a href="https://www.facebook.com/blueprinttoday" class="link" target="_blank">Facebook</a>
+				<a href="https://www.facebook.com/blueprinttoday" class="link" target="_blank"><i class="fa fa-facebook"></i></a>
+				<a href="https://www.twitter.com/blueprinttoday" class="link" target="_blank"><i class="fa fa-twitter"></i></a>
 			</div>
 		</div>
 	</footer>
