Fix signup button on small screen to open navbar collapse

--- a/app/client/module/navigation/navigation.html
+++ b/app/client/module/navigation/navigation.html
@@ -1,6 +1,7 @@
 
 <template name="mainNavigation">
-
+<div id="mainNavBar">
+  
   <div class="navbar-wrapper">
     <div class="navbar navbar-default navbar-inverse navbar-fixed-top" style="margin-bottom: 0px" role="navigation">
       <div class="navbar-header">
@@ -30,5 +31,6 @@
     </div>
   </div>
 
+</div>
 </template>
   
