--- a/app/client/module/navigation/navigation.html
+++ b/app/client/module/navigation/navigation.html
@@ -18,7 +18,7 @@
           <ul class="nav navbar-nav">
             <li id="featuresTab"><a href="/#features">Features</a></li>
             <li id="aboutTab"><a href="/#about">Get Started</a></li>
-            <!-- <li id="videoTab"><a href="/#video">Video</a></li> -->
+            <li id="videoTab"><a href="/#video">Video</a></li>
             <li id="faqTab"><a href="{{ pathFor 'faqs' }}" >FAQs</a></li>
           {{#if currentUser}}
             <li id="homeTab"><a href="home">Home</a></li>
